# oci-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  run_cov.sh
.github/workflows/: rust.yml
src/: base_client.rs  config.rs  identity.rs  lib.rs  main.rs  nosql.rs
tests/: identity.rs  lib.rs  nosql.rs
tests/assets/: oci_config
