[package]
name = "oci-sdk"
version = "0.2.0"
edition = "2021"
description = "Oracle Cloud Infrastructure SDK for Rust Lang"
license = "MIT"
repository = "https://github.com/digital-divas/oci-rust-sdk"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = "0.10.41"
base64 = "0.13.0"
sha2 = "0.10.2"
serde_json = "1.0.82"
chrono = "0.4.19"
home = "0.5.3"
configparser = "3.0.2"
